--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
+.gitignore
 .sass-cache
 src/scroll.js
 src/script.js
 src/tree.js
 css/compiled.css
 js/main.js
+js/script.js
+js/scroll.js
+js/tree.js
 .gitignore
